# ewokscore

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml  test.yml
doc/: api.rst  conf.py  definitions.rst  events.rst  execute_io.rst  explanations.rst  hello_world.rst  howtoguides.rst  implementation.rst  index.rst  notebook_task.nblink  reference.rst  task_discovery.rst  tutorials.rst
doc/examples/: hello_world.py  hello_world_validation.py
doc/explanations/: implementation.rst  index.rst
doc/howtoguides/: change_schema.rst  events.rst  execute_io.rst  function_task.rst  index.rst  notebook_task.nblink  task_discovery.rst
doc/reference/: index.rst  schema.rst  specs.rst
doc/tutorials/: getting_started.rst  hello_world.rst  hello_world_validation.rst  index.rst
ewokscore/: __init__.py  graph.py  hashing.py  inittask.py  node.py  progress.py  registration.py  subgraph.py  task.py  task_summary.py  utils.py  variable.py
ewokscore/cliutils/: cliconvertutils.py  cliexecuteutils.py
ewokscore/events/: contexts.py  global_state.py  initialize_events.py
ewokscore/events/handlers/: __init__.py  base.py  connection.py  sqlite3.py
ewokscore/events/readers/: base.py  sqlite3.py
ewokscore/graph/: compare.py  serialize.py
ewokscore/graph/execute/: sequential.py
ewokscore/persistence/: file.py  nexus.py  proxy.py
ewokscore/tests/: test_cli_utils.py  test_examples.py  test_execute_graph.py  test_graph.py  test_sub_graph.py  test_sub_graph_json.py  test_task.py  utils.py
ewokscore/tests/examples/graphs/: acyclic1.py  acyclic2.py  cyclic1.py  triangle1.py
ewokscore/tests/examples/tasks/: nooutputtask.py  sumlist.py
ewokscore/tests/utils/: results.py
examples/: helloworld.py
src/ewokscore/: __init__.py  bindings.py  engine.py  engine_interface.py  entry_points.py  hashing.py  inittask.py  methodtask.py  notebooktask.py  registration.py  requirements.py  scripttask.py  task.py  task_discovery.py  utils.py  variable.py  wrap.py
src/ewokscore/cliutils/: cliconvertutils.py  cliexecuteutils.py
src/ewokscore/events/: global_state.py
src/ewokscore/graph/: analysis.py  error_handlers.py  graph_io.py  inputs.py  serialize.py  subgraph.py  taskgraph.py  validate.py
src/ewokscore/persistence/: file.py  proxy.py  uri.py
src/ewokscore/tests/: conftest.py  test_examples.py  test_execute_graph.py  test_graph_inputs.py  test_graph_schema.py  test_graph_serialize.py  test_link_is_required.py  test_method_task.py  test_model.py  test_notebook_task.py  test_persistence.py  test_requirements.py  test_script_task.py  test_sub_graph_serialize.py  test_task.py  test_task_discovery.py  test_task_input_model.py  test_task_model.py  test_task_output_model.py  test_variable.py  test_workflow_events.py  test_wrap.py
(+18 files in other folders)
